--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Vagner Wentz <wentz.vagner@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.3",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.0.3"
   }
 }
