--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.3",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.21.2",
     "git-commit-msg-linter": "^3.0.0",
     "typescript": "^4.0.3"
   }
