--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "git-commit-msg-linter": "^3.0.0",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
