--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
