--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Vagner Wentz <wentz.vagner@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
@@ -16,8 +17,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   }
 }
