--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Vagner Wentz <wentz.vagner@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
