--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "6.8.0",
@@ -30,5 +31,8 @@
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "validator": "^13.1.17"
   }
 }
