--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.3",
     "@types/validator": "^13.1.0",
@@ -33,6 +34,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.17"
   }
 }
