--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
+    "@types/mongodb": "^3.5.31",
     "@types/node": "^14.14.3",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -35,6 +37,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
 }
