--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Vagner Wentz <wentz.vagner@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test -- --watch -c jest-unit-config.js",
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.14.3",
@@ -32,11 +34,13 @@
     "jest": "^26.6.1",
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2",
+    "sucrase": "^3.16.0",
     "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "validator": "^13.1.17"
   }
