--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.5.31",
     "@types/node": "^14.14.3",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
@@ -35,6 +36,7 @@
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2",
     "sucrase": "^3.16.0",
+    "supertest": "^6.0.0",
     "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   },
